# oms

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
lib/: CMakeLists.txt
lib/include/: adder.h
lib/src/: adder.cpp
src/: main.cpp
test/: mainTest.cpp
